--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hoezee Legal Group</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: Arial; background: #000; color: #FFD700; margin: 0; }
+    header, footer { background: #111; padding: 20px; text-align: center; }
+    main { padding: 20px; }
+    h1 { color: #FFD700; }
+  </style>
 </head>
 <body>
   <header>
     <h1>Hoezee Legal Group</h1>
-    <p>Your Justice. Our Mission.</p>
+    <p>Justice. Integrity. Excellence.</p>
   </header>
-
-  <section class="about">
+  <main>
     <h2>About Us</h2>
-    <p>Founded by Jonathan Hoezee, Hoezee Legal Group offers modern, client-focused legal services across the Asia Pacific region.</p>
-  </section>
+    <p>We are a modern law firm offering client-focused legal solutions across Asia Pacific.</p>
 
-  <section class="contact">
-    <h2>Contact</h2>
+    <h2>Our Services</h2>
+    <ul>
+      <li>Corporate & Commercial Law</li>
+      <li>Dispute Resolution</li>
+      <li>Real Estate & Property</li>
+      <li>Immigration & Family Law</li>
+    </ul>
+
+    <h2>Contact Us</h2>
     <p>Email: contact@hoezeelegal.com</p>
-    <p>Location: Bangkok, Thailand</p>
-  </section>
-
+    <p>Phone: +66 123 456 789</p>
+  </main>
   <footer>
-    <p>© 2025 Hoezee Legal Group. All rights reserved.</p>
+    &copy; 2025 Hoezee Legal Group. All rights reserved.
   </footer>
 </body>
 </html>
